--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "geist": "^1.2.2",
     "lucide-react": "^0.309.0",
     "next": "14.0.4",
+    "next-auth": "^4.24.6",
     "react": "^18",
     "react-dom": "^18",
     "react-intersection-observer": "^9.5.3",
