--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dayjs": "^1.11.10",
     "geist": "^1.2.2",
     "lucide-react": "^0.309.0",
+    "memoize": "^10.0.0",
     "next": "14.0.4",
     "next-auth": "^4.24.6",
     "react": "^18",
