--- a/package.json
+++ b/package.json
@@ -40,12 +40,14 @@
     "remark-gfm": "^4.0.0",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.2.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "turndown": "^7.1.3"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/turndown": "^5.0.4",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
     "prettier": "^3.1.1",
